@@ -1,5 +1,10 @@
 2009-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* psxsem01/Makefile.am, psxsem01/init.c: Much clean up.
+	* psxsem01/system.h: Removed.
+
+2009-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* psxsem01/init.c: Eliminate warning.
 
 2009-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>
